--- a/.github/workflows/docker-deploy.yaml
+++ b/.github/workflows/docker-deploy.yaml
@@ -43,8 +43,8 @@ jobs:
     - name: Deploy with docker-compose on VPS
       run: |
         ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
-          cd /usr/src/app/phatle-site &&
-          docker-compose pull && 
-          docker-compose down &&
-          docker-compose up -d
+          cd ${{ vars.VPS_PATH }} &&
+          docker compose pull && 
+          docker compose down &&
+          docker compose up -d
         "
