--- a/.github/workflows/docker-deploy.yaml
+++ b/.github/workflows/docker-deploy.yaml
@@ -45,6 +45,7 @@ jobs:
         ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
           cd ${{ vars.VPS_PATH }} &&
           git pull origin main &&
+          export IMAGE_TAG=${{ github.sha }} && 
           docker compose pull && 
           docker compose down &&
           docker compose up -d
