--- a/.github/workflows/docker-deploy.yaml
+++ b/.github/workflows/docker-deploy.yaml
@@ -2,8 +2,10 @@ name: Build, Push and Deploy to VPS
 
 on:
   push:
-    branches:
-      - main
+    # branches:
+    #   - main
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+' 
 
 jobs:
   build:
@@ -21,12 +23,12 @@ jobs:
     # Step 3: Build the Docker image
     - name: Build the Docker image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:${{ github.sha }} .
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:${{ github.ref_name }} .
 
     # Step 4: Push the Docker image to Docker Hub (or your registry)
     - name: Push the Docker image
       run: |
-        docker push ${{ secrets.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:${{ github.sha }}
+        docker push ${{ secrets.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:${{ github.ref_name }}
 
   deploy:
     runs-on: ubuntu-latest
@@ -45,7 +47,7 @@ jobs:
         ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
           cd ${{ vars.VPS_PATH }} &&
           git pull origin main &&
-          export IMAGE_TAG=${{ github.sha }} && 
+          export IMAGE_TAG=${{ github.ref_name }} && 
           docker compose pull && 
           docker compose down &&
           docker compose up -d
