--- a/.github/workflows/docker-deploy.yaml
+++ b/.github/workflows/docker-deploy.yaml
@@ -5,50 +5,60 @@ on:
     # branches:
     #   - main
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+' 
+      - "v[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout the repository
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      # Step 1 Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    # Step 2: Log in to Docker Hub (or your Docker registry)
-    - name: Log in to Docker Hub
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      # Step 2: Log in to Docker Hub (or your Docker registry)
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-    # Step 3: Build the Docker image
-    - name: Build the Docker image
-      run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:${{ github.ref_name }} .
+      # Step 3: Build the Docker image
+      - name: Build the Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:${{ github.ref_name }} .
 
-    # Step 4: Push the Docker image to Docker Hub (or your registry)
-    - name: Push the Docker image
-      run: |
-        docker push ${{ secrets.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:${{ github.ref_name }}
+      # Step 4: Push the Docker image to Docker Hub (or your registry)
+      - name: Push the Docker image
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:${{ github.ref_name }}
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-    # Step 5: Set up SSH to access VPS
-    - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.9.0
-      with:
-        ssh-private-key: ${{ secrets.VPS_PRIVATE_KEY }}
+      # Step 5: Set up SSH to access VPS
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.VPS_PRIVATE_KEY }}
 
-    # Step 6: Deploy using docker-compose
-    - name: Deploy with docker-compose on VPS
-      run: |
-        ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
-          cd ${{ vars.VPS_PATH }} &&
-          git pull origin main &&
-          export IMAGE_TAG=${{ github.ref_name }} && 
-          docker compose pull && 
-          docker compose down &&
-          docker compose up -d
-        "
+      # Step 6: Deploy using docker-compose
+      - name: Deploy with docker-compose on VPS
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
+            cd ${{ vars.VPS_PATH }} &&
+            git pull origin main &&
+            export IMAGE_TAG=${{ github.ref_name }} && 
+            docker compose pull && 
+            docker compose down &&
+            docker compose up -d
+          "
+      # Step 7: Clean up
+      - name: Clean up unused Docker images
+        run: |
+          docker image prune -af
+      - name: Remove old containers
+        run: |
+          docker container prune -f
+      - name: Remove unused volumes
+        run: |
+          docker volume prune -f
